--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>CognitiveMind</title>
+        <title>Cognitive Minds</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets\img\CognitiveMindsFav.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Simple line icons-->
@@ -18,23 +18,14 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
-        <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
-        <nav id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Cognitive Minds</a></li>
-                <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-                <li class="sidebar-nav-item"><a href="#about">About</a></li>
-                <li class="sidebar-nav-item"><a href="#services">Services</a></li>
-                <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
-                <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <h1 class="mb-1 text-white">Cognitive Minds</h1>
-                <h3 class="mb-5 text-white"><em>Website Coming Soon</em></h3>
+                <!-- Logo Image -->
+                <img src="assets/img/CognitiveMindsLogoColour1.png" alt="Cognitive Minds Logo" class="mb-4" style="max-width: 750px; height: auto;">
+                <h3 class="mb-5 text-white"><em>Contact Us At admin@cognitiveminds.co.za To Find Out More</em></h3>
+                <p class="mb-5 text-white"><em>Website Coming Early 2025</em></p>
             </div>
         </header>
+    </body>
 </html>
