--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Cognitive Minds</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets\img\CognitiveMindsFav.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Simple line icons-->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Header-->
-        <header class="masthead d-flex align-items-center">
-            <div class="container px-4 px-lg-5 text-center">
-                <!-- Logo Image -->
-                <img src="assets/img/CognitiveMindsLogoColour1.png" alt="Cognitive Minds Logo" class="mb-4" style="max-width: 750px; height: auto;">
-                <h3 class="mb-5 text-white"><em>Contact Us At admin@cognitiveminds.co.za To Find Out More</em></h3>
-                <p class="mb-5 text-white"><em>Website Coming Early 2025</em></p>
-            </div>
-        </header>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>Cognitive Minds</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/CognitiveMindsFav.ico" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <style>
+        body {
+            background-image: url('assets/img/MastheadBG.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            min-height: 100vh;
+            margin: 0;
+            display: flex; /* Use flexbox */
+            justify-content: center; /* Center horizontally */
+            align-items: center; /* Center vertically */
+            text-align: center; /* Center text */
+        }
+
+        @media (max-width: 768px) {
+            body {
+                background-image: url('assets/img/BGTablet.png');
+            }
+        }
+
+        @media (max-width: 480px) {
+            body {
+                background-image: url('assets/img/BGPhone.png');
+            }
+        }
+
+        .container {
+            color: white; /* Ensure text is visible */
+        }
+    </style>
+</head>
+<body id="page-top">
+    <div class="container px-4 px-lg-5">
+        <img src="assets/img/CognitiveMindsLogoColour1.png" class="mb-4" style="max-width: 100%; height: auto;">
+        <h3 class="mb-5"><em>Contact Us At admin@cognitiveminds.co.za To Find Out More</em></h3>
+        <p class="mb-5"><em>Website Coming Early 2025</em></p>
+    </div>
+</body>
 </html>
